# worlds

.github/workflows/: ci.yml
e2e/: docker-compose.yml
service/: .env  Cargo.toml  Dockerfile  docker-compose.yml  rustfmt.toml
service/docker/: start.sh
service/migrations/: 20210403-000001-users.sql  20210414_000001_users.sql
service/src/: authentication.rs  authorization.rs  database.rs  home.rs  http.rs  integration.rs  main.rs  model.rs  server.rs  service.rs  settings.rs  testdatabase.rs  tests.rs  users.rs
service/src/authentication/: component.rs  endpoints.rs  service.rs
service/src/authentication/endpoints/: authenticate.rs  check.rs  model.rs  problems.rs  register.rs
service/src/authentication/service/: authenticate.rs  register.rs
service/src/authorization/: component.rs  model.rs  service.rs  usecases.rs
service/src/authorization/model/: access_token.rs  authentication.rs  principal.rs  security_context.rs
service/src/authorization/service/: authorize.rs  constants.rs  generate.rs
service/src/database/: component.rs  migrate.rs  postgres.rs
service/src/home/: component.rs  http.rs  service.rs
service/src/home/http/: get.rs
service/src/http/: hal.rs  model.rs  problem.rs  response.rs  valid.rs
service/src/http/hal/: document.rs  links.rs  response.rs
service/src/http/problem/: model.rs  response.rs  types.rs
service/src/http/response/: respondable.rs  simple.rs
service/src/integration/: home.rs  service.rs
service/src/server/: component.rs  span.rs
service/src/service/: testing.rs
service/src/testdatabase/: postgres.rs
service/src/tests/: authentication.rs  database.rs  suite.rs  users.rs
service/src/tests/authentication/: authenticate.rs  check.rs  register.rs
service/src/tests/database/: postgres.rs  seed.rs
service/src/tests/database/seed/: user.rs
service/src/tests/users/: get_user.rs  patch_user.rs
service/src/users/: component.rs  endpoints.rs  home.rs  model.rs  repository.rs  service.rs
service/src/users/endpoints/: get_user.rs  model.rs  patch_user.rs
service/src/users/model/: email.rs  password.rs  user_id.rs  username.rs
service/src/users/repository/: get_user.rs  parse.rs  save_user.rs
service/src/users/service/: create_user.rs  get_user.rs  save_user.rs  update_user.rs
service/src/users/usecases/: get_user.rs
webapp/webapp/: .env  package.json
webapp/webapp/public/: index.html
webapp/webapp/src/: index.tsx
webapp/webapp/src/i18n/: index.ts  messages.json
webapp/webapp/src/ui/: App.tsx
webapp/webapp/src/ui/header/: index.tsx  login.tsx  usermenu.tsx
webapp/webapp/src/ui/home/: index.tsx  landing.tsx
