[package]
name = "worlds_service"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[dependencies]
actix-rt = "1.1.1"
opentelemetry = "0.12.0"
opentelemetry-jaeger = "0.11.0"
tracing = { version = "0.1.25", features = ["log-always"] }
tracing-futures = "0.2.5"
tracing-log = "0.1.2"
tracing-opentelemetry = "0.11.0"
tracing-subscriber = "0.2.17"
env_logger = "0.8.3"
dotenv = "0.15.0"
config = "0.11.0"
serde = {version = "1.0.125", features = ["derive"] }
serde_json = { version = "1.0.64", features = ["preserve_order"] }
actix-cors = "0.5.4"
actix-http = "2.2.0"
actix-service = "1.0.6"
actix-web = "3.3.2"
futures = "0.3.13"
actix-web-prom = "0.5.1"
prometheus = "0.11.0"
async-trait = "0.1.48"
chrono = { version = "0.4.19", features = ["serde"] }
thiserror = "1.0.24"
biscuit = "0.5.0"
deadpool = "0.5.2"
deadpool-postgres = "0.5.6"
tokio-postgres = { version = "0.5.5", features = ["with-uuid-0_8", "with-chrono-0_4", "with-serde_json-1"] }
postgres-types = { version = "0.1.3", features = ["derive", "with-uuid-0_8", "with-chrono-0_4", "with-serde_json-1"] }

[dev-dependencies]
assert2 = "0.3.5"
insta = "1.7.1"
test-case = "1.1.0"
testcontainers = "0.12.0"
lazy_static = "1.4.0"

[package.metadata.commands]
clippy = "find . -name *.rs | grep -v target | xargs touch; cargo clippy"
