[package]
name = "worlds_service"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[dependencies]
dotenv = "0.15.0"
env_logger = "0.8.3"
opentelemetry = "0.13.0"
opentelemetry-jaeger = "0.12.1"
tracing = { version = "0.1.25", features = ["log-always"] }
tracing-futures = "0.2.5"
tracing-log = "0.1.2"
tracing-opentelemetry = "0.12.0"
tracing-subscriber = "0.2.17"
actix-rt = "2.2.0"
actix-web = "4.0.0-beta.5"
actix-service = "2.0.0-beta.5"
actix-http = "3.0.0-beta.5"
actix-cors = "0.6.0-beta.1"
futures = "0.3.13"

[package.metadata.commands]
clippy = "find . -name *.rs | grep -v target | xargs touch; cargo clippy"
