[package]
name = "worlds_service"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[dependencies]
dotenv = "0.15.0"
env_logger = "0.8.3"
opentelemetry = "0.13.0"
opentelemetry-jaeger = "0.12.1"
tracing = { version = "0.1.25", features = ["log-always"] }
tracing-futures = "0.2.5"
tracing-log = "0.1.2"
tracing-opentelemetry = "0.12.0"
tracing-subscriber = "0.2.17"
actix-rt = "2.2.0"
actix-web = "4.0.0-beta.5"
actix-service = "2.0.0-beta.5"
actix-http = "3.0.0-beta.5"
actix-cors = "0.6.0-beta.1"
futures = "0.3.13"
serde = {version = "1.0.125", features = ["derive"] }
serde_json = { version = "1.0.64", features = ["preserve_order"] }
chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
thiserror = "1.0.24"
config = "0.11.0"
deadpool = "0.7.0"
deadpool-postgres = "0.7.0"
tokio-postgres = { version = "0.7.1", features = ["with-uuid-0_8", "with-chrono-0_4", "with-serde_json-1"] }
postgres-types = { version = "0.2.1", features = ["derive", "with-uuid-0_8", "with-chrono-0_4", "with-serde_json-1"] }
rust-embed = "5.9.0"
bytes = "1.0.1"

[dev-dependencies]
test-case = "1.1.0"
assert2 = "0.3.5"
testcontainers = "0.12.0"
lazy_static = "1.4.0"
insta = "1.7.1"

[package.metadata.commands]
clippy = "find . -name *.rs | grep -v target | xargs touch; cargo clippy"
psql = "PGPASSWORD=worlds psql --host localhost --port 45432 --username worlds"
